apps/papra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
  namespace: papra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
    spec:
      volumes:
        - name: papra-data
          persistentVolumeClaim:
            claimName: papra-pvc
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:26.4.0-rootless
          volumeMounts:
            - mountPath: /app/app-data
              name: papra-data
          ports:
            - containerPort: 1221
