apps/papra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papra-service
  namespace: papra
  labels:
    app: papra
spec:
  type: ClusterIP
  ports:
    - port: 1221
      name: http
      targetPort: 1221
      protocol: TCP
  selector:
    app: papra
