apps/papra/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra
  namespace: papra
spec:
  hostnames:
    - papra.lokal
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nginx-gateway
      namespace: default
      port: 443
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: papra-service
          port: 1221
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
